dev/app/02-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: app-tls
  namespace: app
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`app.data-essential.demo.traefiklabs.tech`)
      services:
        - name: app-v1
          port: 80
      # middlewares:
      #   - name: test-header
      #   - name: oidc-auth
      #   - name: ratelimit
      #   - name: jwt-auth
  tls:
    certResolver: default

## Rate limit
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
  namespace: app
spec:
  plugin:
    rateLimit:
      average: 2
      burst: 2

## Header
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-header
  namespace: app
spec:
  headers:
    sslRedirect: true
    customRequestHeaders:
      X-Custom-Header: toto123

## Open ID connect
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: oidc-auth
  namespace: app
spec:
  plugin:
    oidcAuth:
      source: oidcSource
      scopes:
        - openid
      redirectUrl: "/callback"
      session:
        name: "%s-session"
        path: "/"
        secret: powpowpowpowpowpowpowpow
        expiry: 86400
      # forwardHeaders:
      #   X-Traefik-Group: groups
      # claims: Contains(`groups`, `admin`)

## JWT
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: jwt-auth
  namespace: app
spec:
  plugin:
    jwtAuth:
      source: jwtSource
      forwardHeaders:
        X-User: id
